vpc/lg.tf
resource "aws_lb_listener" "jenkins_redirect_to_https" {
  load_balancer_arn = aws_lb.my_lb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_lb_listener" "jenkins_forward_to_target_group" {
  load_balancer_arn = aws_lb.my_lb.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = local.Environment.certificate_arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.my_target_group_1.arn
  }
}
